--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,6 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 1
-    - name: apt-update
-      run: sudo apt-get update -qq
-    - name: apt-install
-      run: sudo apt-get install -qq -y --no-install-recommends libunwind-dev
-    - name: make
-      run: make test
+    - run: sudo apt-get update -qq
+    - run: sudo apt-get install -qq -y --no-install-recommends libunwind-dev
+    - run: make test
