--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 1
+        submodules: recursive
     - run: sudo apt-get update -qq
-    - run: sudo apt-get install -qq -y --no-install-recommends libunwind-dev
+    - run: sudo apt-get install -qq -y --no-install-recommends autoconf automake libtool
     - run: make -j $(nproc) test
